[gd_scene load_steps=88 format=3 uid="uid://0xglca5ob35f"]

[ext_resource type="Script" path="res://Entities/WindowGirl/Scripts/window_girlv_2.gd" id="1_u3fju"]
[ext_resource type="Texture2D" uid="uid://b2mgb1hip35k3" path="res://Entities/WindowGirl/Art/WG_Spritesheet.png" id="2_8tejb"]
[ext_resource type="Texture2D" uid="uid://6tkser7ej7oj" path="res://Entities/WindowGirl/Art/WG_Break_In_Spritesheet.png" id="3_6rl5w"]
[ext_resource type="Texture2D" uid="uid://do0tj02dopgje" path="res://Systems/Flashlight/Cone_Light.png" id="4_6ogw0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7io8x"]
radius = 0.01

[sub_resource type="AtlasTexture" id="AtlasTexture_5386u"]
atlas = ExtResource("2_8tejb")
region = Rect2(0, 210, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmhtr"]
atlas = ExtResource("2_8tejb")
region = Rect2(64, 210, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hxvt"]
atlas = ExtResource("2_8tejb")
region = Rect2(128, 210, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8b0m"]
atlas = ExtResource("2_8tejb")
region = Rect2(192, 210, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_jun51"]
atlas = ExtResource("2_8tejb")
region = Rect2(256, 210, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_0aqgt"]
atlas = ExtResource("2_8tejb")
region = Rect2(320, 210, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_eclom"]
atlas = ExtResource("2_8tejb")
region = Rect2(384, 210, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_64gm8"]
atlas = ExtResource("3_6rl5w")
region = Rect2(0, 0, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dy3u"]
atlas = ExtResource("3_6rl5w")
region = Rect2(96, 0, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_00fka"]
atlas = ExtResource("3_6rl5w")
region = Rect2(192, 0, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_la7c1"]
atlas = ExtResource("3_6rl5w")
region = Rect2(288, 0, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v376g"]
atlas = ExtResource("3_6rl5w")
region = Rect2(384, 0, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w3fb"]
atlas = ExtResource("3_6rl5w")
region = Rect2(480, 0, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvu2v"]
atlas = ExtResource("3_6rl5w")
region = Rect2(576, 0, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3ebm"]
atlas = ExtResource("3_6rl5w")
region = Rect2(672, 0, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_medkm"]
atlas = ExtResource("3_6rl5w")
region = Rect2(0, 128, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxrpu"]
atlas = ExtResource("3_6rl5w")
region = Rect2(96, 128, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehf4s"]
atlas = ExtResource("3_6rl5w")
region = Rect2(192, 128, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eaviu"]
atlas = ExtResource("3_6rl5w")
region = Rect2(288, 128, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqo0a"]
atlas = ExtResource("3_6rl5w")
region = Rect2(384, 128, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpevn"]
atlas = ExtResource("3_6rl5w")
region = Rect2(480, 128, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h78j0"]
atlas = ExtResource("3_6rl5w")
region = Rect2(576, 128, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a4bo"]
atlas = ExtResource("3_6rl5w")
region = Rect2(672, 128, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jp2l"]
atlas = ExtResource("3_6rl5w")
region = Rect2(0, 256, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h22ue"]
atlas = ExtResource("3_6rl5w")
region = Rect2(96, 256, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i2dj"]
atlas = ExtResource("3_6rl5w")
region = Rect2(192, 256, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ns20"]
atlas = ExtResource("3_6rl5w")
region = Rect2(288, 256, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_83uw4"]
atlas = ExtResource("3_6rl5w")
region = Rect2(384, 256, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxss4"]
atlas = ExtResource("3_6rl5w")
region = Rect2(480, 256, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jiti"]
atlas = ExtResource("3_6rl5w")
region = Rect2(576, 256, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pefw4"]
atlas = ExtResource("3_6rl5w")
region = Rect2(672, 256, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l8fa"]
atlas = ExtResource("3_6rl5w")
region = Rect2(0, 384, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_27l5g"]
atlas = ExtResource("3_6rl5w")
region = Rect2(96, 384, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlot8"]
atlas = ExtResource("3_6rl5w")
region = Rect2(192, 384, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i4rt"]
atlas = ExtResource("3_6rl5w")
region = Rect2(288, 384, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcuru"]
atlas = ExtResource("3_6rl5w")
region = Rect2(384, 384, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7puh"]
atlas = ExtResource("3_6rl5w")
region = Rect2(480, 384, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uv6o3"]
atlas = ExtResource("3_6rl5w")
region = Rect2(576, 384, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_me8am"]
atlas = ExtResource("2_8tejb")
region = Rect2(0, 350, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_bw3hh"]
atlas = ExtResource("2_8tejb")
region = Rect2(64, 350, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfaig"]
atlas = ExtResource("2_8tejb")
region = Rect2(128, 350, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_baxol"]
atlas = ExtResource("2_8tejb")
region = Rect2(192, 350, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpdvd"]
atlas = ExtResource("2_8tejb")
region = Rect2(256, 350, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnn0e"]
atlas = ExtResource("2_8tejb")
region = Rect2(320, 350, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vu65"]
atlas = ExtResource("2_8tejb")
region = Rect2(384, 350, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3kmc"]
atlas = ExtResource("2_8tejb")
region = Rect2(448, 350, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jli4"]
atlas = ExtResource("2_8tejb")
region = Rect2(512, 350, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_ceb40"]
atlas = ExtResource("2_8tejb")
region = Rect2(0, 280, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgunu"]
atlas = ExtResource("2_8tejb")
region = Rect2(64, 280, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_20ncb"]
atlas = ExtResource("2_8tejb")
region = Rect2(128, 280, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_pouqt"]
atlas = ExtResource("2_8tejb")
region = Rect2(192, 280, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6uvt"]
atlas = ExtResource("2_8tejb")
region = Rect2(256, 280, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3vcr"]
atlas = ExtResource("2_8tejb")
region = Rect2(320, 280, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcad8"]
atlas = ExtResource("2_8tejb")
region = Rect2(0, 140, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwdma"]
atlas = ExtResource("2_8tejb")
region = Rect2(64, 140, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_00ar4"]
atlas = ExtResource("2_8tejb")
region = Rect2(128, 140, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1sdi"]
atlas = ExtResource("2_8tejb")
region = Rect2(192, 140, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_aaxst"]
atlas = ExtResource("2_8tejb")
region = Rect2(256, 140, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mfly"]
atlas = ExtResource("2_8tejb")
region = Rect2(320, 140, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_583qp"]
atlas = ExtResource("2_8tejb")
region = Rect2(384, 140, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_hed03"]
atlas = ExtResource("2_8tejb")
region = Rect2(448, 140, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_02kyc"]
atlas = ExtResource("2_8tejb")
region = Rect2(512, 140, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_3umeb"]
atlas = ExtResource("2_8tejb")
region = Rect2(0, 0, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbjte"]
atlas = ExtResource("2_8tejb")
region = Rect2(64, 0, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltvld"]
atlas = ExtResource("2_8tejb")
region = Rect2(128, 0, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_nedlv"]
atlas = ExtResource("2_8tejb")
region = Rect2(192, 0, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2i7e"]
atlas = ExtResource("2_8tejb")
region = Rect2(256, 0, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_07njv"]
atlas = ExtResource("2_8tejb")
region = Rect2(320, 0, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jdrx"]
atlas = ExtResource("2_8tejb")
region = Rect2(384, 0, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_afixe"]
atlas = ExtResource("2_8tejb")
region = Rect2(448, 0, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfoic"]
atlas = ExtResource("2_8tejb")
region = Rect2(512, 0, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3vxe"]
atlas = ExtResource("2_8tejb")
region = Rect2(0, 70, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoi6b"]
atlas = ExtResource("2_8tejb")
region = Rect2(64, 70, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovjh1"]
atlas = ExtResource("2_8tejb")
region = Rect2(128, 70, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_csuyr"]
atlas = ExtResource("2_8tejb")
region = Rect2(192, 70, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_ki3ba"]
atlas = ExtResource("2_8tejb")
region = Rect2(256, 70, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdkrg"]
atlas = ExtResource("2_8tejb")
region = Rect2(320, 70, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7b7f"]
atlas = ExtResource("2_8tejb")
region = Rect2(384, 70, 64, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr4cm"]
atlas = ExtResource("2_8tejb")
region = Rect2(448, 70, 64, 70)

[sub_resource type="SpriteFrames" id="SpriteFrames_gqhcx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5386u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmhtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hxvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8b0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jun51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0aqgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eclom")
}],
"loop": false,
"name": &"Attack",
"speed": 21.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_64gm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dy3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00fka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la7c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v376g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w3fb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvu2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3ebm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_medkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxrpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehf4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eaviu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqo0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpevn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h78j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a4bo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jp2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h22ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i2dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ns20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83uw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxss4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jiti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pefw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l8fa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27l5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlot8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i4rt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcuru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7puh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uv6o3")
}],
"loop": false,
"name": &"BreakIn",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_me8am")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bw3hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfaig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_baxol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpdvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnn0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vu65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3kmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jli4")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ceb40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgunu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20ncb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pouqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6uvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3vcr")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcad8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwdma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00ar4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1sdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aaxst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mfly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_583qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hed03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02kyc")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3umeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbjte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltvld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nedlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2i7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07njv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jdrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afixe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfoic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3vxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoi6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovjh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csuyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki3ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdkrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7b7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr4cm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7b7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdkrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ki3ba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csuyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovjh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoi6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3vxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfoic")
}],
"loop": false,
"name": &"Scream",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_e5ohf"]
radius = 25.0799

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_xo5kh"]

[node name="WindowGirlv2" type="CharacterBody2D" node_paths=PackedStringArray("anim_sprite", "navigation_agent", "vision_cone", "hitbox")]
script = ExtResource("1_u3fju")
movement_speed = 80
acceleration = 4
attack_damage = 20
spawn_location = "FOREST"
wander_radius = 100.0
anim_sprite = NodePath("AnimatedSprite2D")
navigation_agent = NodePath("NavigationAgent2D")
vision_cone = NodePath("Vision")
hitbox = NodePath("Hitbox")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("CircleShape2D_7io8x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_gqhcx")
animation = &"Run"
autoplay = "Idle"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 1.0
navigation_layers = 2
radius = 20.0
debug_enabled = true

[node name="Vision" type="PointLight2D" parent="."]
color = Color(0.832644, 0.290377, 0.290377, 1)
texture = ExtResource("4_6ogw0")

[node name="RayCast2D" type="RayCast2D" parent="Vision"]
self_modulate = Color(0.531996, 0.650591, 0.936568, 1)
scale = Vector2(0.625, 0.625)
target_position = Vector2(170, 75)
collision_mask = 3

[node name="RayCast2D2" type="RayCast2D" parent="Vision"]
self_modulate = Color(0.531996, 0.650591, 0.936568, 1)
scale = Vector2(0.625, 0.625)
target_position = Vector2(170, 50)
collision_mask = 3

[node name="RayCast2D3" type="RayCast2D" parent="Vision"]
self_modulate = Color(0.531996, 0.650591, 0.936568, 1)
scale = Vector2(0.625, 0.625)
target_position = Vector2(170, 25)
collision_mask = 3

[node name="RayCast2D4" type="RayCast2D" parent="Vision"]
self_modulate = Color(0.531996, 0.650591, 0.936568, 1)
scale = Vector2(0.625, 0.625)
target_position = Vector2(170, 0)
collision_mask = 3

[node name="RayCast2D5" type="RayCast2D" parent="Vision"]
self_modulate = Color(0.531996, 0.650591, 0.936568, 1)
scale = Vector2(0.625, 0.625)
target_position = Vector2(170, -25)
collision_mask = 3

[node name="RayCast2D6" type="RayCast2D" parent="Vision"]
self_modulate = Color(0.531996, 0.650591, 0.936568, 1)
scale = Vector2(0.625, 0.625)
target_position = Vector2(170, -50)
collision_mask = 3

[node name="RayCast2D7" type="RayCast2D" parent="Vision"]
self_modulate = Color(0.531996, 0.650591, 0.936568, 1)
scale = Vector2(0.625, 0.625)
target_position = Vector2(170, -75)
collision_mask = 3

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(0, 12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_e5ohf")

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="SearchDuration" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="WindowCheck" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_xo5kh")
anim_player = NodePath("../AnimationPlayer")

[connection signal="PlayerFound" from="." to="." method="_on_player_found"]
[connection signal="PlayerLost" from="." to="." method="_on_player_lost"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
[connection signal="timeout" from="SearchDuration" to="." method="_on_search_duration_timeout"]
[connection signal="timeout" from="WindowCheck" to="." method="_on_window_check_timeout"]
